Fix optimized erasing from the beginning of a circular_deque.

Previously the boundary check was incorrect when detecting items
were being deleted from the front of a circular_deque. This caused
it to fall through to the slow case where all items were shifted
over, breaking the promise of amoritized O(1) time.

Since this is an optimization (the existing code was correct, just
slower than necessary), there are no unit tests for this.

Bug: 769812
Change-Id: I8d78be8185741baaca5f2e36413f615102fd68db
Reviewed-on: https://chromium-review.googlesource.com/690976
Commit-Queue: Brett Wilson <brettw@chromium.org>
Reviewed-by: dsinclair <dsinclair@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505205}
Former-commit-id: 4cc7142f773d01c9d0e5c7ac1eba62a7c6bbbd10